# ros2_gluon

./: .gitignore  README.md
src/actuatorcontroller_ros2/: CMakeLists.txt  README.md  package.xml
src/actuatorcontroller_ros2/include/actuatorcontroller_ros2/: actuatorcontroller_ros2.h  trajectory_subscriber.h
src/actuatorcontroller_ros2/launch/: real_robot.launch.py
src/actuatorcontroller_ros2/msg/: ActuatorArray.msg  ActuatorAttribute.msg  ActuatorCommand.msg  ActuatorModes.msg
src/actuatorcontroller_ros2/src/: innfos_actuator.cpp
src/actuatorcontroller_ros2/src/actuatorcontroller_ros2/: actuatorcontroller_ros2.cpp  actuatorcontroller_ros2param.cpp  actuatorcontroller_ros2service.cpp  trajectory_subscriber.cpp
src/actuatorcontroller_ros2/srv/: AttributeDictionary.srv  AttributeLookup.srv  AttributeQuery.srv  DebugQuery.srv  GeneralQuery.srv  IDModify.srv  ParametersSave.srv  TriviaQuery.srv  ZeroReset.srv
src/gluon_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/gluon_moveit_config/config/: gluon.ros2_control.xacro  gluon.srdf  gluon.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/gluon_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/gluon_py/: package.xml  setup.cfg  setup.py
src/gluon_py/launch/: display.launch.py
src/gluon_py/urdf/: gluon.urdf
